// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CircleBadge > respects the inline prop 1`] = `
<div
  class="sc-gEvEer lNPvJ"
/>
`;

exports[`CircleBadge > respects the variant prop 1`] = `
<div
  class="sc-gEvEer irZoQl"
/>
`;

exports[`CircleBadge > uses the size prop to override the variant prop 1`] = `
<div
  class="sc-gEvEer ceBMXF"
  size="20"
/>
`;
